Fix 'loading' styling, dark mode v1.2.1

--- a/src/app/feed/article-view/article-view.component.colors.scss
+++ b/src/app/feed/article-view/article-view.component.colors.scss
@@ -16,4 +16,7 @@
   .last-edit, .views {
     color: map-get($theme, helper-text);
   }
+  .loading {
+    color: map-get($theme, text);
+  }
 }
