--- a/src/app/feed/article-view/article-view.component.scss
+++ b/src/app/feed/article-view/article-view.component.scss
@@ -41,6 +41,7 @@
   align-items: center;
   justify-content: center;
   height: 300px;
+  @include base.text-style
 }
 
 .no-comments {
