--- a/src/app/feed/tutorial-article-view/tutorial-article-view.component.scss
+++ b/src/app/feed/tutorial-article-view/tutorial-article-view.component.scss
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   height: 300px;
+  @include base.text-style;
 }
 
 .bottom-buttons {
